--- a/main_config.json
+++ b/main_config.json
@@ -3,5 +3,5 @@
     "command_paths": [],
     "is_first_time": true,
     "module_type": "ghost",
-    "config_folder_path": ""
+    "config_folder_path": "vaperemake/configs/"
 }
